# docker-examiner

./: .gitignore  LICENSE  README.md  docker_forensics.py  docker_tui.py  pyproject.toml
tests/: conftest.py  test_forensics.py
