[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "docker-forensics"
version = "0.1.0"
description = "Offline forensic analysis of Docker overlay2 filesystems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["docker", "forensics", "overlay2", "dfir"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Filesystems",
]

# No third-party dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
docker-forensics = "docker_forensics:main"

[tool.setuptools]
py-modules = ["docker_forensics"]
